Updates from Overleaf

--- a/main.tex
+++ b/main.tex
@@ -5,11 +5,11 @@
 % Overleaf version.
 
 %*********************************************************************
-% pkuthss_zyz: 北京大学研究生学位论文模板_ZYZ修改及使用心得
+% pkuthss_zyz: 北京大学研究生学位论文模板 ZYZ先生的使用心得
 % 2024/06/15
 %
 % 重要提示：
-%   1. 当前模板基于pkuthss v1.9.2，也参考了pkuthss v1.9.2和北京大学工学院的LaTex模板
+%   1. 当前模板基于pkuthss v1.9.2，也参考了pkuthss v1.9.4和北京大学工学院的LaTex模板
 %   2. 当前overleaf版符合研究生学位论文要求，可通过图书馆审核
 %   3. 请使用UTF-8编码，XeLaTeX方式编译
 %   4. 请仔细阅读用户文档
@@ -17,7 +17,7 @@
 %   6. 感谢github作者 @iofu728 @zhiyunyao 提供了非常漂亮的pkuthss模板
 %*********************************************************************
 
-\documentclass[UTF8,fontset=fandol,ugly,language=chinese]{pkuthss}
+\documentclass[UTF8,fontset=auto,ugly,language=chinese]{pkuthss}
   % 学位论文模式  ugly    (默认打开，请保留)
   % 盲审模式     blind   (默认关闭)
   % 语言        language (默认chinese | english)
